--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,15 @@
-Cython==0.29.21
+Cython
 librosa==0.9.2
 matplotlib==3.3.1
-scikit-learn==1.0.2
+moviepy
+imageio==2.4.1
 scipy
-numpy==1.21.6
+numpy
 tensorboard
 torch
 torchvision
 torchaudio
 unidecode
-pyopenjtalk-prebuilt
-jamo
-pypinyin
-jieba
-protobuf
-cn2an
-inflect
-eng_to_ipa
-ko_pron
-indic_transliteration==2.3.37
-num_thai==0.0.5
-opencc==1.1.1
-demucs
 openai-whisper
 gradio
+phonemizer
