--- a/requirements.txt
+++ b/requirements.txt
@@ -5,9 +5,10 @@ imageio==2.4.1
 scipy
 numpy
 tensorboard
-torch
-torchvision
-torchaudio
+Pillow==9.5.0
+torch==1.11.0+cu115
+torchvision==0.12.0+cu115
+torchaudio==0.11.0+cu115
 unidecode
 openai-whisper
 gradio
